MC-381-385: setting up initial docker pattern

--- a/.npmrc
+++ b/.npmrc
@@ -7,3 +7,4 @@ public-hoist-pattern[]='tslib'
 public-hoist-pattern[]='*apollo*'
 public-hoist-pattern[]='*graphql*'
 public-hoist-pattern[]='*sentry*'
+public-hoist-pattern[]='*prisma*'
