--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local", "tsconfig.json"],
+  "globalDependencies": ["**/.env.*local", "packages/tsconfig/**"],
   "globalDotEnv": [".env"],
   "pipeline": {
     "build": {
