--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,5 +7,5 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: ArtiomTr/jest-coverage-report-action@v2
+      - uses: actions/checkout@v1
+      - uses: ArtiomTr/jest-coverage-report-action@v2.0-rc.6
