--- a/.circleci/shared.yml
+++ b/.circleci/shared.yml
@@ -124,8 +124,8 @@ jobs:
     machine: true
     resource_class: << parameters.resource-class >>
     steps:
-      - exit-early-if-irrelevant:
-          for: << parameters.for >>
+#      - exit-early-if-irrelevant:
+#          for: << parameters.for >>
       - checkout
       - restore_cache:
           name: Restore Tfenv
