pushing prospect-api to prod

--- a/.circleci/shared.yml
+++ b/.circleci/shared.yml
@@ -238,8 +238,8 @@ jobs:
     machine: true
     resource_class: << parameters.resource-class >>
     steps:
-      - exit-early-if-irrelevant:
-          for: << parameters.for >>
+#      - exit-early-if-irrelevant:
+#          for: << parameters.for >>
       - attach_workspace:
           at: << parameters.workspace >>
       - run:
@@ -294,8 +294,8 @@ jobs:
     machine: true
     resource_class: << parameters.resource-class >>
     steps:
-      - exit-early-if-irrelevant:
-          for: << parameters.for >>
+#      - exit-early-if-irrelevant:
+#          for: << parameters.for >>
       - jq/install
       - run:
           name: Deploy Lambda
@@ -370,8 +370,8 @@ jobs:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
     steps:
-      - exit-early-if-irrelevant:
-          for: << parameters.for >>
+#      - exit-early-if-irrelevant:
+#          for: << parameters.for >>
       - checkout
       - install_pnpm
       - run:
@@ -421,8 +421,8 @@ jobs:
     executor: aws-cli/default
 
     steps:
-      - exit-early-if-irrelevant:
-          for: << parameters.for >>
+#      - exit-early-if-irrelevant:
+#          for: << parameters.for >>
       - checkout
       - aws-cli/setup:
           aws-access-key-id: << parameters.aws-access-key-id >>
@@ -483,8 +483,8 @@ jobs:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
     steps:
-      - exit-early-if-irrelevant:
-          for: << parameters.for >>
+#      - exit-early-if-irrelevant:
+#          for: << parameters.for >>
       - run:
           name: Setup Environment variables
           command: |
@@ -653,8 +653,8 @@ jobs:
           username: $DOCKER_LOGIN
           password: $DOCKER_PASSWORD
     steps:
-      - exit-early-if-irrelevant:
-          for: << parameters.for >>
+#      - exit-early-if-irrelevant:
+#          for: << parameters.for >>
       - run:
           name: Setup Environment variables
           command: |
