some cleanup and updates

--- a/.circleci/branch-filters.yml
+++ b/.circleci/branch-filters.yml
@@ -1,3 +1,4 @@
+# Adopted from https://github.com/Pocket/pocket-monorepo/tree/main/.circleci
 # Workflow shortcuts
 # Anything in this file will be added to all the yaml files, before CircleCI merges them.
 # This is because yaml files need to be valid before merge and that means things like anchors must be defined in each file.
