--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,4 @@
+# Adopted from https://github.com/Pocket/pocket-monorepo/tree/main/.circleci
 version: 2.1
 
 # this allows you to use CircleCI's dynamic configuration feature
