--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,7 @@
       "outputs": ["dist/**"]
     },
     "test": {
+      "cache": false,
       "dependsOn": ["^build"]
     },
     "test-integrations": {
@@ -23,13 +24,13 @@
       "cache": false,
       "persistent": true
     },
-    "db:seed": {
+    "db:dynamo-seed": {
       "cache": false
     },
-    "db:generate-client": {
+    "db:prisma-seed": {
       "cache": false
     },
-    "db:migrate:reset": {
+    "db:generate-prisma-client": {
       "cache": false
     }
   }
