--- a/packages/prospectapi-common/package.json
+++ b/packages/prospectapi-common/package.json
@@ -21,6 +21,7 @@
     "@faker-js/faker": "6.0.0",
     "graphql-tag": "2.12.6",
     "cross-fetch": "3.1.5",
+    "p-retry": "6.2.0",
     "tldts": "5.7.87"
   },
   "devDependencies": {
@@ -29,7 +30,8 @@
     "@types/chai": "4.3.4",
     "@types/jest": "28.1.7",
     "chai": "4.3.7",
-    "jest": "28.1.3",
+    "msw": "2.1.2",
+    "jest": "29.7.0",
     "ts-jest": "28.0.8"
   }
 }
