--- a/packages/prospectapi-common/package.json
+++ b/packages/prospectapi-common/package.json
@@ -21,7 +21,7 @@
     "@faker-js/faker": "6.0.0",
     "graphql-tag": "2.12.6",
     "cross-fetch": "3.1.5",
-    "p-retry": "6.2.0",
+    "fetch-retry": "5.0.6",
     "tldts": "5.7.87"
   },
   "devDependencies": {
