--- a/packages/prospectapi-common/package.json
+++ b/packages/prospectapi-common/package.json
@@ -21,12 +21,14 @@
     "@faker-js/faker": "6.0.0",
     "graphql-tag": "2.12.6",
     "cross-fetch": "3.1.5",
+    "fetch-retry": "5.0.6",
     "tldts": "5.7.87"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "@types/jest": "28.1.7",
+    "msw": "2.1.2",
     "jest": "28.1.3",
     "ts-jest": "28.0.8"
   }
