--- a/lambdas/prospect-api-bridge-lambda/package.json
+++ b/lambdas/prospect-api-bridge-lambda/package.json
@@ -8,21 +8,27 @@
     "test": "jest \"\\.spec\\.ts\"",
     "test-integrations": "jest \"\\.integration\\.ts\" --runInBand",
     "lint": "eslint --fix-dry-run \"src/**/*.ts\"",
-    "format": "eslint --fix \"src/**/*.ts\""
+    "format": "eslint --fix \"src/**/*.ts\"",
+    "prepare": "ts-patch install && typia patch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-eventbridge": "3.342.0",
     "@aws-sdk/client-lambda": "3.496.0",
-    "@sentry/serverless": "7.95.0"
+    "@sentry/serverless": "7.95.0",
+    "typia": "^5.4.0"
   },
   "devDependencies": {
-    "tsconfig": "workspace:*",
-    "eslint-config-custom": "workspace:*",
     "@types/aws-lambda": "8.10.131",
     "@types/jest": "29.5.11",
+    "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
-    "ts-jest": "29.1.2"
+    "ts-jest": "29.1.2",
+    "ts-node": "^10.9.2",
+    "ts-patch": "^3.1.2",
+    "tsconfig": "workspace:*",
+    "typescript": "5.3.2"
   },
   "files": [
     "dist",
