--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "seed": "dotenv -- turbo run db:prisma-seed"
   },
   "engines": {
-    "node": "18.18"
+    "node": "^20.11"
   },
-  "packageManager": "pnpm@8.12.1",
+  "packageManager": "pnpm@8.14.3",
   "dependencies": {
     "dotenv-cli": "latest"
   },
