--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -55,8 +55,8 @@
     "tsconfig": "workspace:*",
     "@types/faker": "6.6.8",
     "@types/graphql-upload": "8.0.12",
-    "@types/jest": "29.5.3",
-    "@types/node": "18.16.19",
+    "@types/jest": "29.5.11",
+    "@types/node": "^20.11.6",
     "@types/sinon": "10.0.15",
     "form-data": "4.0.0",
     "jest": "29.7.0",
@@ -64,7 +64,7 @@
     "nodemon": "3.0.1",
     "prisma": "^4.16.1",
     "supertest": "6.3.3",
-    "ts-jest": "29.1.1"
+    "ts-jest": "29.1.2"
   },
   "files": [
     "dist",
