--- a/lambdas/prospect-api-bridge-lambda/package.json
+++ b/lambdas/prospect-api-bridge-lambda/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-eventbridge": "3.504.0",
+    "@aws-sdk/client-firehose": "^3.504.0",
     "@aws-sdk/client-lambda": "3.504.0",
     "@sentry/serverless": "7.95.0",
     "typia": "^5.4.0"
