chore(docs): Update setup documentation and local environment variables
- Updated Node version, fixed a couple of typos in the main README

- Added `DATABASE_URL` to the sample `.env` file as Curated Corpus API
would not start for me without it

- Tweaked `.gitignore` to make sure `.idea` files are definitely ignored.

--- a/example.env
+++ b/example.env
@@ -8,3 +8,4 @@ LOCALSTACK_API_KEY=another-fake-key
 AWS_XRAY_CONTEXT_MISSING=LOG_ERROR
 AWS_XRAY_LOG_LEVEL=silent
 SNOWPLOW_ENDPOINT=localhost:9090
+DATABASE_URL=mysql://root:@mysql:3306/curation_corpus?connect_timeout=300
