--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -50,20 +50,19 @@
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.341.0",
-    "@faker-js/faker": "8.0.2",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
-    "@types/faker": "6.6.8",
+    "@faker-js/faker": "8.4.0",
     "@types/graphql-upload": "8.0.12",
     "@types/jest": "29.5.12",
     "@types/node": "^20.11.6",
+    "eslint-config-custom": "workspace:*",
     "form-data": "4.0.0",
     "jest": "29.7.0",
     "nock": "13.5.1",
     "nodemon": "3.0.1",
     "prisma": "^4.16.1",
     "supertest": "6.3.4",
-    "ts-jest": "29.1.2"
+    "ts-jest": "29.1.2",
+    "tsconfig": "workspace:*"
   },
   "files": [
     "dist",
