--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -39,6 +39,7 @@
     "@sentry/tracing": "7.49.0",
     "@snowplow/node-tracker": "3.5.0",
     "@types/luxon": "3.4.2",
+    "content-common": "workspace:*",
     "cors": "2.8.5",
     "dataloader": "2.2.2",
     "date-fns": "2.29.3",
