--- a/servers/prospect-api/package.json
+++ b/servers/prospect-api/package.json
@@ -24,6 +24,7 @@
     "@pocket-tools/apollo-utils": "3.0.0",
     "@pocket-tools/ts-logger": "^1.2.4",
     "@snowplow/node-tracker": "^3.5.0",
+    "content-common": "workspace:*",
     "prospectapi-common": "workspace:*",
     "supertest": "^6.3.3"
   },
