--- a/.circleci/shared.yml
+++ b/.circleci/shared.yml
@@ -17,6 +17,7 @@ repo_for_enum: &repo_for_enum
     enum:
       - prospect_api
       - curated_corpus_api
+      - corpus_scheduler_lambda
 
 resource_class_enum: &resource_class_enum
   resource-class:
@@ -32,6 +33,9 @@ parameters:
     type: boolean
     default: false
   curated_corpus_api:
+    type: boolean
+    default: false
+  corpus_scheduler_lambda:
     type: boolean
     default: false
 
@@ -57,6 +61,7 @@ commands:
           environment:
             prospect_api: << pipeline.parameters.prospect_api >>
             curated_corpus_api: << pipeline.parameters.curated_corpus_api >>
+            corpus_scheduler_lambda: << pipeline.parameters.corpus_scheduler_lambda >>
   install_pnpm:
     steps:
       - run:
