--- a/lambdas/corpus-scheduler-lambda/package.json
+++ b/lambdas/corpus-scheduler-lambda/package.json
@@ -18,12 +18,10 @@
     "@aws-sdk/client-secrets-manager": "^3.509.0",
     "@sentry/serverless": "7.95.0",
     "aws-sdk-client-mock": "^3.0.1",
-    "curated-corpus-api": "workspace:*",
+    "content-common": "workspace:*",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
-    "node-fetch": "^2.6.7",
-    "npm": "^10.4.0",
-    "prospectapi-common": "workspace:*"
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.133",
