--- a/packages/content-common/package.json
+++ b/packages/content-common/package.json
@@ -12,12 +12,15 @@
   "author": "pocket",
   "license": "ISC",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@snowplow/node-tracker": "3.5.0"
+  },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
     "@types/jest": "29.5.12",
+    "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
-    "ts-jest": "29.1.2"
+    "msw": "2.1.2",
+    "ts-jest": "29.1.2",
+    "tsconfig": "workspace:*"
   }
 }
