--- a/lambdas/corpus-scheduler-lambda/package.json
+++ b/lambdas/corpus-scheduler-lambda/package.json
@@ -22,8 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
     "node-fetch": "^2.6.7",
-    "typia": "^5.4.0",
-    "prospectapi-common": "workspace:*"
+    "typia": "^5.4.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.133",
