--- a/packages/content-common/package.json
+++ b/packages/content-common/package.json
@@ -7,7 +7,7 @@
     "build": "rm -rf dist && tsc",
     "test": "jest \"\\.spec\\.ts\"",
     "lint": "eslint --fix-dry-run \"*.ts\"",
-    "format": "eslint --fix \"**/*.ts\" \"test/**/*.ts\""
+    "format": "eslint --fix \"**/*.ts\""
   },
   "author": "pocket",
   "license": "ISC",
