--- a/lambdas/corpus-scheduler-lambda/package.json
+++ b/lambdas/corpus-scheduler-lambda/package.json
@@ -27,10 +27,11 @@
   "devDependencies": {
     "@types/aws-lambda": "8.10.133",
     "@types/jest": "29.5.12",
+    "aws-sdk-client-mock": "^3.0.1",
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
+    "msw": "2.1.2",
     "ts-jest": "29.1.2",
-    "aws-sdk-client-mock": "^3.0.1",
     "tsconfig": "workspace:*"
   },
   "files": [
