--- a/packages/content-common/package.json
+++ b/packages/content-common/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "29.5.12",
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
+    "msw": "2.1.2",
     "ts-jest": "29.1.2",
     "tsconfig": "workspace:*"
   }
