--- a/lambdas/corpus-scheduler-lambda/tsconfig.json
+++ b/lambdas/corpus-scheduler-lambda/tsconfig.json
@@ -1,13 +1,21 @@
 {
   "extends": "tsconfig/lambda.json",
   "compilerOptions": {
+    "sourceRoot": "/",
     "resolveJsonModule": true,
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "plugins": [
+      {
+        "transform": "typia/lib/transform"
+      }
+    ],
+    "strict": true
   },
   "exclude": [
     "node_modules",
     "**/*.spec.ts",
+    "**/testHelpers.ts",
     "**/*.integration.ts",
     "jest.config.js",
     "jest.setup.js"
