--- a/packages/prospectapi-common/package.json
+++ b/packages/prospectapi-common/package.json
@@ -17,6 +17,7 @@
     "@apollo/client": "3.9.5",
     "@aws-sdk/client-dynamodb": "3.504.0",
     "@aws-sdk/lib-dynamodb": "3.504.0",
+    "content-common": "workspace:*",
     "@sentry/node": "6.19.7",
     "cross-fetch": "3.1.5",
     "fetch-retry": "5.0.6",
