--- a/.circleci/shared.yml
+++ b/.circleci/shared.yml
@@ -528,32 +528,20 @@ jobs:
       - checkout
       - install_pnpm
       - run:
-          # Theres a really annoying bug in PNPM deploy command that will try and create a folder at /home/pruned which we are not allowed to do,
-          # so we move it under 1 directory to let it do its thing.
-          # https://github.com/pnpm/pnpm/issues/5086
-          # We also go crazy on the deploy command per https://github.com/pnpm/pnpm/issues/6166#issuecomment-1802541463
           name: Build lambda
           command: |
             pnpm install --filter=<< parameters.scope >>... --frozen-lockfile
             pnpm run --filter=<< parameters.scope >>... build
-            mkdir -p ~/bug/project
-            cp -R . ~/bug/project/
-            cd ~/bug/project/
-            pnpm --config.shamefully-hoist=true --config.hoist=true --config.node-linker=true --config.symlinks=false --config.shared-workspace-lockfile=false deploy --filter=<< parameters.scope >> --prod pruned
       - run:
           name: Package Lambda
           command: |
-            cd ~/bug/project/pruned
-            cp -r package.json dist/
-            cp -r node_modules/ dist/node_modules/
-
-            cd dist
+            export LAMBDA_WORKSPACE_PATH=$(pnpm list -r --json | jq -r --arg name "<< parameters.scope >>" '.[] | select(.name==$name) | .path')
+            cd ${LAMBDA_WORKSPACE_PATH}/dist
             zip -r9 ~/project/${CIRCLE_SHA1}.zip .
             mkdir /tmp/artifacts
             cp ~/project/${CIRCLE_SHA1}.zip /tmp/artifacts/
-            cd ..
             maxFileSize=256000 # Get the size of the directory in kilobytes
-            export dirSize=$(du -s dist | cut -f1) 
+            export dirSize=$(du -s . | cut -f1) 
             echo "Size is: $dirSize"
             if ((dirSize > maxFileSize)); then
               echo "Directory size is equal to or larger than $maxFileSize KB. which is the lambda limit"
