--- a/.docker/local.env
+++ b/.docker/local.env
@@ -3,6 +3,7 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_REGION=us-east-1
 PROSPECT_API_PROSPECTS_TABLE=PROAPI-local-Prospects
 AWS_ENDPOINT=http://localhost:4566
+AWS_ENDPOINT_URL=http://localhost:4566
 AWS_SECRET_ACCESS_KEY=localstack-fake-key
 LOCALSTACK_API_KEY=another-fake-key
 AWS_XRAY_CONTEXT_MISSING=LOG_ERROR
