--- a/lambdas/corpus-scheduler-lambda/tsconfig.json
+++ b/lambdas/corpus-scheduler-lambda/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "sourceRoot": "/",
     "resolveJsonModule": true,
+    "declaration": true,
+    "declarationMap": true,
     "outDir": "dist",
     "rootDir": "src",
     "plugins": [
