--- a/lambdas/prospect-api-bridge-lambda/package.json
+++ b/lambdas/prospect-api-bridge-lambda/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "29.5.12",
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
+    "msw": "2.1.2",
     "ts-jest": "29.1.2",
     "ts-node": "^10.9.2",
     "ts-patch": "^3.1.2",
