--- a/packages/prospectapi-common/package.json
+++ b/packages/prospectapi-common/package.json
@@ -15,8 +15,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "3.9.5",
-    "@aws-sdk/client-dynamodb": "^3.529.1",
-    "@aws-sdk/lib-dynamodb": "^3.529.1",
+    "@aws-sdk/client-dynamodb": "3.529.1",
+    "@aws-sdk/lib-dynamodb": "3.529.1",
     "content-common": "workspace:*",
     "@sentry/node": "6.19.7",
     "cross-fetch": "3.1.5",
