--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -28,9 +28,9 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server-plugin-response-cache": "4.1.3",
-    "@aws-sdk/client-eventbridge": "^3.529.1",
-    "@aws-sdk/client-s3": "^3.529.1",
-    "@aws-sdk/lib-storage": "^3.529.1",
+    "@aws-sdk/client-eventbridge": "3.529.1",
+    "@aws-sdk/client-s3": "3.529.1",
+    "@aws-sdk/lib-storage": "3.529.1",
     "@devoxa/prisma-relay-cursor-connection": "3.1.0",
     "@pocket-tools/apollo-utils": "3.3.4",
     "@pocket-tools/ts-logger": "^1.3.0",
