--- a/lambdas/prospect-api-bridge-lambda/package.json
+++ b/lambdas/prospect-api-bridge-lambda/package.json
@@ -13,9 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-eventbridge": "^3.504.0",
-    "@aws-sdk/client-firehose": "^3.504.0",
-    "@aws-sdk/client-lambda": "^3.504.0",
+    "@aws-sdk/client-eventbridge": "3.529.1",
+    "@aws-sdk/client-firehose": "3.529.1",
+    "@aws-sdk/client-lambda": "3.529.1",
     "@sentry/serverless": "7.95.0",
     "typia": "^5.4.0"
   },
