--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -28,9 +28,9 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server-plugin-response-cache": "4.1.3",
-    "@aws-sdk/client-eventbridge": "3.504.0",
-    "@aws-sdk/client-s3": "^3.341.0",
-    "@aws-sdk/lib-storage": "^3.342.0",
+    "@aws-sdk/client-eventbridge": "3.529.1",
+    "@aws-sdk/client-s3": "3.529.1",
+    "@aws-sdk/lib-storage": "3.529.1",
     "@devoxa/prisma-relay-cursor-connection": "3.1.0",
     "@pocket-tools/apollo-utils": "3.3.4",
     "@pocket-tools/ts-logger": "^1.3.0",
@@ -50,7 +50,7 @@
     "metadata-scraper": "^0.2.61"
   },
   "devDependencies": {
-    "@aws-sdk/types": "^3.341.0",
+    "@aws-sdk/types": "^3.523.0",
     "@faker-js/faker": "8.4.1",
     "@types/graphql-upload": "8.0.12",
     "@types/jest": "29.5.12",
