--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@vercel/style-guide": "^4.0.2",
     "eslint-config-turbo": "^1.10.12",
-    "typescript": "^5.2.2",
+    "typescript": "5.3.3",
     "@typescript-eslint/eslint-plugin": "6.1.0",
     "@typescript-eslint/parser": "6.1.0",
     "eslint-config-prettier": "8.8.0",
