--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^20.11.6",
-    "ts-node": "10.9.2",
+    "ts-node": "^10.9.2",
     "tslib": "2.6.2",
     "typescript": "5.3.3",
     "tsup": "8.0.1"
