feat: [MC-681] Implement scheduled_corpus_candidate Snowplow functions (#87)
* feat: [MC-681] Implement scheduled_corpus_candidate Snowplow functions

chore: move common Snowplow logic to content-common

chore: use shared Snowplow code in prospect-api and curated-corpus-api

fix: Snowplow retries on error

chore: move Snowplow Micro to integration test file

fix: lint error snowplowHttpProtocol unused

feat: emit Snowplow events on error

remove duplicate test coverage for image error

fix snowplow tests

fix ECONNREFUSED to Snowplow Micro in CI tests

Revert "fix ECONNREFUSED to Snowplow Micro in CI tests"

This reverts commit 470df1355fc914d1cdbbb9e3cd3f271221892a66.

fix: move Snowplow Micro tests to integrations

add test for Snowplow event on success

* fix: prospect-api getTracker initialization

* feat: Snowplow appId has -dev suffix outside prod

* fix: prospect-api test error endpoint does not exist

* pnpm dedupe

* fix: lint error for unused snowplowHttpProtocol

* fix: lambda size issue

* Revert "fix: lambda size issue"

This reverts commit 2b6db4ce3f5b78fe094a6d6de434fb8810f240d7.

* fix: remove @aws-sdk/client-lambda

* fix: content-common snowplow import

* fix: build error no entry for '/jest/29.7.0'

* fix: update content-common version

* fix: content-common snowplow import (2)

* fix: content-common snowplow import (3)

* fix: set SNOWPLOW_ENDPOINT env var

* fix: corpus scheduler integration test imports

* fix: flush Snowplow before exit

fix: wait until Snowplow events are sent

fix: wait until Snowplow events are sent (2)

* refactor: move manual addition reasons to scheduled item creation

- follow up PRs will be needed to change the snowplow schema

* follow-up:

- improve naming
- update readme

* fix: revert namespace back to pocket-backend

Will check with Kirill before changing this.

I searched through the dbt-snowflake repo, and I _think_ namespace is not u

--- a/packages/content-common/package.json
+++ b/packages/content-common/package.json
@@ -1,8 +1,13 @@
 {
   "name": "content-common",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "common code shared between multiple content services",
   "main": "./dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./snowplow": "./dist/snowplow/index.js",
+    "./snowplow/test-helpers": "./dist/snowplow/test-helpers.js"
+  },
   "scripts": {
     "build": "rm -rf dist && tsc",
     "test": "jest \"\\.spec\\.ts\"",
@@ -12,12 +17,15 @@
   "author": "pocket",
   "license": "ISC",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@snowplow/node-tracker": "3.5.0"
+  },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*",
     "@types/jest": "29.5.12",
+    "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
-    "ts-jest": "29.1.2"
+    "msw": "2.1.2",
+    "ts-jest": "29.1.2",
+    "tsconfig": "workspace:*"
   }
 }
