--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           name: Generate List of Configs to Merge
           command: |
             # Generate a list of all the circleci configs we want to run
-            file_list=(".circleci/shared.yml" ".circleci/monorepo-jobs.yml" ".circleci/prospect-api.yml" ".circleci/curated-corpus-api.yml" ".circleci/corpus-scheduler-lambda.yml")       
+            file_list=(".circleci/shared.yml" ".circleci/monorepo-jobs.yml" ".circleci/prospect-api.yml" ".circleci/curated-corpus-api.yml" ".circleci/corpus-scheduler-lambda.yml" ".circleci/prospect-translation-lambda.yml" ".circleci/prospect-bridge-lambda.yml")       
             touch /tmp/configs.txt
 
             # Add file header to each file and dump it to the config list
@@ -45,9 +45,11 @@ jobs:
           config-path: /tmp/generated-config.yml
           output-path: /tmp/pipeline-parameters.json
           mapping: |
-            ((servers|infrastructure|lambdas)/prospect-api/.*)|(packages/.*)|(pnpm-lock\.yaml)|(Dockerfile) prospect_api true
+            ((servers|infrastructure)/prospect-api/.*)|(packages/.*)|(pnpm-lock\.yaml)|(Dockerfile) prospect_api true
             ((servers|infrastructure)/curated-corpus-api/.*)|(packages/.*)|(pnpm-lock\.yaml)|(Dockerfile) curated_corpus_api true
             ((lambdas|infrastructure)/corpus-scheduler-lambda/.*)|(packages/.*)|(pnpm-lock\.yaml) corpus_scheduler_lambda true
+            ((lambdas|infrastructure)/prospect-translation-lambda/.*)|(packages/.*)|(pnpm-lock\.yaml) prospect_translation_lambda true
+            ((lambdas|infrastructure)/prospect-bridge-lambda/.*)|(packages/.*)|(pnpm-lock\.yaml) prospect_bridge_lambda true
       - continuation/continue:
           configuration_path: /tmp/generated-config.yml
           parameters: /tmp/pipeline-parameters.json
