--- a/.circleci/prospect-api.yml
+++ b/.circleci/prospect-api.yml
@@ -38,25 +38,25 @@ workflows:
           push: false
           extra-build-args: --build-arg GIT_SHA=${CIRCLE_SHA1} --build-arg SCOPE=prospect-api --build-arg PORT=4026
 
-      - build_lambda:
-            <<: *not_dev_main
-            context: pocket
-            for: prospect_api
-            name: prospect-api_build_lambda
-            aws-access-key-id: Dev_AWS_ACCESS_KEY
-            aws-secret-access-key: Dev_AWS_SECRET_ACCESS_KEY
-            aws-region: Dev_AWS_DEFAULT_REGION
-            scope: prospect-api-translation-aws_lambda
-
-      - build_lambda:
-            <<: *not_dev_main
-            context: pocket
-            for: prospect_api
-            name: prospect-api-bridge-aws_lambda
-            aws-access-key-id: Dev_AWS_ACCESS_KEY
-            aws-secret-access-key: Dev_AWS_SECRET_ACCESS_KEY
-            aws-region: Dev_AWS_DEFAULT_REGION
-            scope: prospect-api-translation-aws_lambda
+#      - build_lambda:
+#            <<: *not_dev_main
+#            context: pocket
+#            for: prospect_api
+#            name: prospect-api_build_lambda
+#            aws-access-key-id: Dev_AWS_ACCESS_KEY
+#            aws-secret-access-key: Dev_AWS_SECRET_ACCESS_KEY
+#            aws-region: Dev_AWS_DEFAULT_REGION
+#            scope: prospect-api-translation-aws_lambda
+#
+#      - build_lambda:
+#            <<: *not_dev_main
+#            context: pocket
+#            for: prospect_api
+#            name: prospect-api-bridge-aws_lambda
+#            aws-access-key-id: Dev_AWS_ACCESS_KEY
+#            aws-secret-access-key: Dev_AWS_SECRET_ACCESS_KEY
+#            aws-region: Dev_AWS_DEFAULT_REGION
+#            scope: prospect-api-translation-aws_lambda
 
       - infrastructure:
           <<: *not_dev_main
@@ -114,57 +114,57 @@ workflows:
           requires:
             - prospect-api_build_docker_dev
 
-      - build_lambda:
-          <<: *only_dev
-          context: pocket
-          for: prospect_api
-          name: prospect-api_build_lambda_dev
-          aws-access-key-id: Dev_AWS_ACCESS_KEY
-          aws-secret-access-key: Dev_AWS_SECRET_ACCESS_KEY
-          aws-region: Dev_AWS_DEFAULT_REGION
-          scope: prospect-api-translation-aws_lambda
-          s3-bucket: pocket-prospectapi-dev-sqs-translation
-          requires:
-            - prospect-api_infrastructure_apply_dev
-
-      - build_lambda:
-          <<: *only_dev
-          context: pocket
-          for: prospect_api
-          name: prospect-api-bridge_build_lambda_dev
-          aws-access-key-id: Dev_AWS_ACCESS_KEY
-          aws-secret-access-key: Dev_AWS_SECRET_ACCESS_KEY
-          aws-region: Dev_AWS_DEFAULT_REGION
-          scope: prospect-api-bridge-aws_lambda
-          s3-bucket: pocket-prospectapi-dev-sqs-bridge
-          requires:
-            - prospect-api_infrastructure_apply_dev
-
-      - code_deploy_lambda:
-          <<: *only_dev
-          context: pocket
-          for: prospect_api
-          name: prospect-api_code_deploy_lambda_dev
-          resource-class: pocket/default-dev
-          codedeploy-app-name: ProspectAPI-Dev-Sqs-Translation-Lambda
-          codedeploy-group-name: ProspectAPI-Dev-Sqs-Translation-Lambda
-          function-name: ProspectAPI-Dev-Sqs-Translation-Function
-          s3-bucket: pocket-prospectapi-dev-sqs-translation
-          requires:
-            - prospect-api_build_lambda_dev
-
-      - code_deploy_lambda:
-          <<: *only_dev
-          context: pocket
-          for: prospect_api
-          name: prospect-api-bridge_code_deploy_lambda_dev
-          resource-class: pocket/default-dev
-          codedeploy-app-name: ProspectAPI-Dev-Sqs-Bridge-Lambda
-          codedeploy-group-name: ProspectAPI-Dev-Sqs-Bridge-Lambda
-          function-name: ProspectAPI-Dev-Sqs-Bridge-Function
-          s3-bucket: pocket-prospectapi-dev-sqs-bridge
-          requires:
-            - prospect-api-bridge_build_lambda_dev
+#      - build_lambda:
+#          <<: *only_dev
+#          context: pocket
+#          for: prospect_api
+#          name: prospect-api_build_lambda_dev
+#          aws-access-key-id: Dev_AWS_ACCESS_KEY
+#          aws-secret-access-key: Dev_AWS_SECRET_ACCESS_KEY
+#          aws-region: Dev_AWS_DEFAULT_REGION
+#          scope: prospect-api-translation-aws_lambda
+#          s3-bucket: pocket-prospectapi-dev-sqs-translation
+#          requires:
+#            - prospect-api_infrastructure_apply_dev
+#
+#      - build_lambda:
+#          <<: *only_dev
+#          context: pocket
+#          for: prospect_api
+#          name: prospect-api-bridge_build_lambda_dev
+#          aws-access-key-id: Dev_AWS_ACCESS_KEY
+#          aws-secret-access-key: Dev_AWS_SECRET_ACCESS_KEY
+#          aws-region: Dev_AWS_DEFAULT_REGION
+#          scope: prospect-api-bridge-aws_lambda
+#          s3-bucket: pocket-prospectapi-dev-sqs-bridge
+#          requires:
+#            - prospect-api_infrastructure_apply_dev
+#
+#      - code_deploy_lambda:
+#          <<: *only_dev
+#          context: pocket
+#          for: prospect_api
+#          name: prospect-api_code_deploy_lambda_dev
+#          resource-class: pocket/default-dev
+#          codedeploy-app-name: ProspectAPI-Dev-Sqs-Translation-Lambda
+#          codedeploy-group-name: ProspectAPI-Dev-Sqs-Translation-Lambda
+#          function-name: ProspectAPI-Dev-Sqs-Translation-Function
+#          s3-bucket: pocket-prospectapi-dev-sqs-translation
+#          requires:
+#            - prospect-api_build_lambda_dev
+#
+#      - code_deploy_lambda:
+#          <<: *only_dev
+#          context: pocket
+#          for: prospect_api
+#          name: prospect-api-bridge_code_deploy_lambda_dev
+#          resource-class: pocket/default-dev
+#          codedeploy-app-name: ProspectAPI-Dev-Sqs-Bridge-Lambda
+#          codedeploy-group-name: ProspectAPI-Dev-Sqs-Bridge-Lambda
+#          function-name: ProspectAPI-Dev-Sqs-Bridge-Function
+#          s3-bucket: pocket-prospectapi-dev-sqs-bridge
+#          requires:
+#            - prospect-api-bridge_build_lambda_dev
 
 
       # Notify sentry of dev deployment
@@ -235,57 +235,57 @@ workflows:
           requires:
             - prospect-api_build_docker_prod
 
-      - build_lambda:
-          <<: *only_main
-          context: pocket
-          for: prospect_api
-          name: prospect-api_build_lambda_prod
-          aws-access-key-id: Prod_AWS_ACCESS_KEY
-          aws-secret-access-key: Prod_AWS_SECRET_ACCESS_KEY
-          aws-region: Prod_AWS_DEFAULT_REGION
-          scope: prospect-api-translation-aws_lambda
-          s3-bucket: pocket-prospectapi-prod-sqs-translation
-          requires:
-            - prospect-api_infrastructure_apply_prod
-
-      - build_lambda:
-          <<: *only_main
-          context: pocket
-          for: prospect_api
-          name: prospect-api-bridge_build_lambda_prod
-          aws-access-key-id: Prod_AWS_ACCESS_KEY
-          aws-secret-access-key: Prod_AWS_SECRET_ACCESS_KEY
-          aws-region: Prod_AWS_DEFAULT_REGION
-          scope: prospect-api-bridge-aws_lambda
-          s3-bucket: pocket-prospectapi-prod-sqs-bridge
-          requires:
-            - prospect-api_infrastructure_apply_prod
-
-      - code_deploy_lambda:
-          <<: *only_main
-          context: pocket
-          for: prospect_api
-          name: prospect-api_code_deploy_lambda_prod
-          resource-class: pocket/default-prod
-          codedeploy-app-name: ProspectAPI-Prod-Sqs-Translation-Lambda
-          codedeploy-group-name: ProspectAPI-Prod-Sqs-Translation-Lambda
-          function-name: ProspectAPI-Prod-Sqs-Translation-Function
-          s3-bucket: pocket-prospectapi-prod-sqs-translation
-          requires:
-            - prospect-api_build_lambda_prod
-
-      - code_deploy_lambda:
-          <<: *only_main
-          context: pocket
-          for: prospect_api
-          name: prospect-api-bridge_code_deploy_lambda_prod
-          resource-class: pocket/default-prod
-          codedeploy-app-name: ProspectAPI-Prod-Sqs-Bridge-Lambda
-          codedeploy-group-name: ProspectAPI-Prod-Sqs-Bridge-Lambda
-          function-name: ProspectAPI-Prod-Sqs-Bridge-Function
-          s3-bucket: pocket-prospectapi-prod-sqs-bridge
-          requires:
-            - prospect-api-bridge_build_lambda_prod
+#      - build_lambda:
+#          <<: *only_main
+#          context: pocket
+#          for: prospect_api
+#          name: prospect-api_build_lambda_prod
+#          aws-access-key-id: Prod_AWS_ACCESS_KEY
+#          aws-secret-access-key: Prod_AWS_SECRET_ACCESS_KEY
+#          aws-region: Prod_AWS_DEFAULT_REGION
+#          scope: prospect-api-translation-aws_lambda
+#          s3-bucket: pocket-prospectapi-prod-sqs-translation
+#          requires:
+#            - prospect-api_infrastructure_apply_prod
+#
+#      - build_lambda:
+#          <<: *only_main
+#          context: pocket
+#          for: prospect_api
+#          name: prospect-api-bridge_build_lambda_prod
+#          aws-access-key-id: Prod_AWS_ACCESS_KEY
+#          aws-secret-access-key: Prod_AWS_SECRET_ACCESS_KEY
+#          aws-region: Prod_AWS_DEFAULT_REGION
+#          scope: prospect-api-bridge-aws_lambda
+#          s3-bucket: pocket-prospectapi-prod-sqs-bridge
+#          requires:
+#            - prospect-api_infrastructure_apply_prod
+#
+#      - code_deploy_lambda:
+#          <<: *only_main
+#          context: pocket
+#          for: prospect_api
+#          name: prospect-api_code_deploy_lambda_prod
+#          resource-class: pocket/default-prod
+#          codedeploy-app-name: ProspectAPI-Prod-Sqs-Translation-Lambda
+#          codedeploy-group-name: ProspectAPI-Prod-Sqs-Translation-Lambda
+#          function-name: ProspectAPI-Prod-Sqs-Translation-Function
+#          s3-bucket: pocket-prospectapi-prod-sqs-translation
+#          requires:
+#            - prospect-api_build_lambda_prod
+#
+#      - code_deploy_lambda:
+#          <<: *only_main
+#          context: pocket
+#          for: prospect_api
+#          name: prospect-api-bridge_code_deploy_lambda_prod
+#          resource-class: pocket/default-prod
+#          codedeploy-app-name: ProspectAPI-Prod-Sqs-Bridge-Lambda
+#          codedeploy-group-name: ProspectAPI-Prod-Sqs-Bridge-Lambda
+#          function-name: ProspectAPI-Prod-Sqs-Bridge-Function
+#          s3-bucket: pocket-prospectapi-prod-sqs-bridge
+#          requires:
+#            - prospect-api-bridge_build_lambda_prod
 
       # Notify sentry of main deployment
       - sentry_release_notification:
